# DimplomaTemporary

./: .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  setup.sh
backend/: __init__.py
backend/analysis_summarizer/: __init__.py  models.py  summarizer.py
backend/analysis_summarizer/exporters/: __init__.py  json_exporter.py  pdf_exporter.py  text_exporter.py
backend/api/: __init__.py  detector_api.py
backend/core/: __init__.py  exceptions.py  history.py  outcome.py  pipeline.py
backend/file_ingestion/: __init__.py  collector.py  filter.py  models.py
backend/netlist_graph_builder/: __init__.py  builder.py  edge_encoder.py  models.py  node_encoder.py
backend/netlist_synthesizer/: __init__.py  models.py  synthesizer.py  yosys_runner.py
backend/netlist_synthesizer/scripts/: elaborate.ys  preprocess.ys  synthesize.ys
backend/syntax_parser/: __init__.py  models.py  parser.py  systemverilog_parser.py  verilog_parser.py
backend/training/: __init__.py  download_extended_datasets.py  download_trusthub.py  eval_models.py  eval_trusthub_yosys.py  generate_large_benchmarks.py  labeler.py  precompute_baseline.py  preprocess_graphs.py  train.py  train_local.py  trainer.py  trusthub_dataset.py
backend/training/data/: README.md
backend/training/data/cell_libraries/skywater130nm/: sky130_fd_sc_hd.v  sky130_fd_sc_hd_udp.v
backend/training/data/configs/: dataset_config.yaml
backend/training/data/metadata/: split_config.json
backend/training/data/trusthub/PIC16F84-T100/trojan/: risc16f84.v
backend/training/data/trusthub/PIC16F84-T200/trojan/: risc16f84.v
backend/training/data/trusthub/PIC16F84-T400/trojan/: risc16f84.v
backend/trojan_classifier/: __init__.py  algorithmic_analyzer.py  classifier.py  ensemble.py  golden_stage.py  localization.py  models.py  structural_verifier.py
backend/trojan_classifier/architectures/: __init__.py  gat.py  gcn.py  gin.py
backend/trojan_classifier/weights/: gat_weights.pt  gat_weights2.pt  gcn_weights.pt  gin_weights.pt  gin_weights2.pt  structural_baseline.json
gui/: __init__.py  config.py  file_explorer.py  log_viewer.py  main.py  main_window.py  reports_dir_dialog.py  state.py  tabbed_log_panel.py  toolbar.py  workers.py
gui/styles/: dark_theme.qss  light_theme.qss
tests/: __init__.py
tests/test_integration/: test_full_pipeline.py  test_run_as_design.py
tests/test_trojan_classifier/: test_source_path_validation.py
training_scripts/: download_datasets.sh  train_all.sh  train_gat.sh  train_gcn.sh  train_gin.sh
windows/: README.md  run_gui.bat  setup.ps1  train_all.bat  train_gat.bat  train_gcn.bat  train_gin.bat
(+37 files in other folders)
