[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trojan-detector"
version = "0.1.0"
description = "Automated hardware trojan detection in gate-level netlists using Graph Neural Networks"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Narek"},
]
dependencies = [
    "pyverilog>=1.3.0",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "pydantic>=2.0.0",
    "reportlab>=4.0.0",
    "xxhash>=3.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
]
training = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
]
all = [
    "trojan-detector[gui,training,dev]",
]

[project.scripts]
trojan-detector = "main:main"

[tool.setuptools.packages.find]
include = ["backend*", "gui*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
